--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -370,8 +370,9 @@ main {
 }
 
 .styrax-logo {
-  max-width: 450px;
-  margin: 40px;
+  max-width: 100%;
+  width: 80%;
+  margin: 10px;
 }
 
 #mc_embed_signup_scroll {
@@ -380,7 +381,6 @@ main {
   align-items: flex-start;
   margin-left: auto;
   margin-right: auto;
-  max-width: 400px;
 }
 
 #mc-embedded-subscribe {
